--- a/HW7.Rnw
+++ b/HW7.Rnw
@@ -25,6 +25,9 @@ pois.prob <- function(x, lambda, type="<="){
   if(x<0){
     return("x must be a positive integer")
   }
+  if(lambda<0){
+    return("lambda must be positive")
+  }
   if(type == "<="){#Less than or equal to
     return(ppois(x,lambda))
   }
